<resources>
    <string name="app_name">LaptopBuy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hi, Gagandeep</string>
    <string name="nav_header_subtitle">Welcome to LaptopBUY</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="app_logo_name">LaptopBUY</string>
    <string name="app_logo_slogan">Buy the best Laptops in North America</string>

    <string name="menu_home">Home</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_search">Search</string>
    <string name="AboutUs">About Us</string>
    <string name="we_believe_technology_is_amazing_and_we_aspire_to_enhance_our_customers_lives_through_technology_anywhere_anytime">We believe technology is amazing, and we aspire to enhance our customers’ lives through technology – anywhere, anytime.</string>
    <string name="our_vision">OUR VISION</string>
    <string name="our_company">OUR COMPANY</string>
    <string name="wholly_owned_subsidiary_canada_s_largest_electronic_retailer">Wholly Owned subsidiary || CANADA\'s largest electronic retailer</string>
    <string name="_150_stores_most_visited_laptop_retailer_in_canada">150+ stores || Most visited laptop retailer in Canada</string>
    <string name="our_people">OUR PEOPLE</string>
    <string name="our_presence">OUR PRESENCE</string>
    <string name="_12_000_canadians_employed_nationwide">12,000 Canadians employed nationwide</string>
    <string name="our_success">OUR SUCCESS</string>
    <string name="canada_s_top_100_employers_2017_2018_2019">Canada\'s Top 100 Employers(2017,2018,2019)</string>
    <string name="join_us">JOIN US</string>
    <string name="todo">TODO</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="q_can_i_replace_my_order_without_paying_any_extra_fees">Q: Can I replace my order without paying any extra fees?</string>
    <string name="a_of_course_you_will_not_be_charged_for_anything_if_you_have_returned_it_within_the_14_days_of_shipment_purchase">A: Of course! You will not be charged for anything if you have returned it within the 14 days of shipment/purchase.</string>
    <string name="q_is_there_any_guarantee_warranty_given_with_the_laptops">Q: Is there any guarantee/warranty given with the laptops?</string>
    <string name="a_yes_we_provide_guarantee_warranty_depending_upon_the_models_you_purchase_and_insurance_you_buy_with_them">A: Yes! We provide guarantee/warranty depending upon the models you purchase and insurance you buy with them.</string>
    <string name="q_are_the_products_available_with_finance">Q: Are the products available with finance?</string>
    <string name="a_yes_we_do_have_various_finance_offers_with_different_products">A: Yes! We do have various finance offers with different products.</string>
    <string name="q_do_you_provide_anti_virus_software_with_the_products">Q: Do You provide anti-virus software with the products?</string>
    <string name="a_yes_we_do_have_different_anti_virus_software_available_in_our_product_list">A: Yes! We do have different anti-virus software available in our product list.</string>
    <string name="ask_me">Ask Me</string>
    <string name="any_other_query_click_the_button"><![CDATA[ANY OTHER QUERY? Click the button-->]]></string>
    <string name="about_us">About Us</string>
    <string name="if_you_have_any_query_any_complaint_regarding_product_facing_any_issue_in_the_app_or_you_have_any_suggestions_regarding_our_services">If you have any query, any complaint regarding product, facing any issue in the app or you have any suggestions regarding our services</string>
    <string name="please_write_it_here_with_your_email_id_or_phone_and_we_will_get_to_you_soon">Please write it here with your email id or phone and we will get to you soon!!!</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="our_vision">OUR VISION</string>
    <string name="we_believe_technology_is_amazing_and_we_aspire_to_enhance_our_customers_lives_through_technology_anywhere_anytime">We believe technology is amazing, and we aspire to enhance our customers’ lives through technology – anywhere, anytime.</string>
    <string name="our_company">OUR COMPANY</string>
    <string name="wholly_owned_subsidiary_canada_s_largest_consumer_electronics_retailer">Wholly-owned subsidiary || Canada’s largest consumer electronics retailer</string>
    <string name="our_presence">OUR PRESENCE</string>
    <string name="_175_stores_coast_to_coast_12_000_canadians_employed_nationwide">175+ stores coast-to-coast || 12,000+ Canadians employed nationwide</string>
    <string name="our_success">OUR SUCCESS</string>
    <string name="join_us">JOIN US</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="fb">https://www.facebook.com/bestbuy/</string>
    <string name="insta">https://www.instagram.com/bestbuycanada/?hl=en</string>
    <string name="twitter">https://twitter.com/bestbuycanada?lang=en</string>
    <string name="internet">https://www.bestbuy.ca/en-ca</string>


</resources>