<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_favourite" />
        <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_search" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_faqs"
            android:title="FAQ'S"
            />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_contactus"
            android:title="Contact Us"
            />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_aboutus"
            android:title="About Us"
            />
    </group>
</menu>